# FT8AF

./: .gitignore  CLAUDE.md  README.md  flake.nix  privacy.md
.github/: copilot-instructions.md
.github/scripts/: play_track_watch.py
.github/workflows/: build-release.yml  ci.yml  copilot-setup-steps.yml  discord-merge-notify.yml  discord-play-track-watch.yml  main-gate.yml
docs/: copilot-cloud-agents.md
ft8cn/: build.gradle
ft8cn/app/: build.gradle
ft8cn/app/src/androidTest/java/com/bg7yoz/ft8cn/ft8transmit/: GenerateFT8NativeTest.java
ft8cn/app/src/androidTest/kotlin/com/bg7yoz/ft8cn/: AppSmokeTest.kt
ft8cn/app/src/main/: AndroidManifest.xml
ft8cn/app/src/main/assets/: rigaddress.txt  us_grid_states.json
ft8cn/app/src/main/cpp/: CMakeLists.txt  usb_audio.cpp  usb_audio_capture.cpp
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/: FAQActivity.java  GeneralVariables.java  MainViewModel.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/bluetooth/: BluetoothStateBroadcastReceive.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/connector/: CableSerialPort.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/database/: DatabaseOpr.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/ft8transmit/: FT8TransmitSignal.java  GenerateFT8.java  QueuedCaller.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/html/: HtmlContext.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/icom/: ControlUdp.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/location/: GridLocationUpdater.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/log/: ImportSharedLogs.java  LogQSLAdapter.java  QSLCallsignRecord.java  QSLRecord.java  ShareLogs.java  ThirdPartyService.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/rigs/: InstructionSet.java  Yaesu3RigConstant.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/ui/: AudioDeviceSpinnerAdapter.java  CallingListAdapter.java  ConfigFragment.java  EditQSLDialog.java  ExportLogSheet.java  HelpDialog.java  LogFragment.java  MyCallingFragment.java  QRZ_Fragment.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/wave/: MicRecorder.java  UsbAudioDevice.java  UsbAudioNative.java
ft8cn/app/src/main/kotlin/radio/ks3ckc/ft8us/: ComposeMainActivity.kt  FT8USApp.kt
ft8cn/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
ft8cn/app/src/main/res/layout/: call_list_holder_item.xml  call_list_holder_simple_item.xml  clear_cache_dialog_layout.xml  dialog_edit_qsl.xml  dialog_export_log.xml  help_dialog_layout.xml  log_qsl_holder_item.xml
ft8cn/app/src/main/res/layout-land/: log_qsl_holder_item.xml
ft8cn/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ft8cn/app/src/main/res/values-el/: strings.xml
ft8cn/app/src/main/res/values-es/: strings.xml
ft8cn/app/src/main/res/values-ja/: strings.xml
ft8cn/app/src/main/res/values-night/: themes.xml
ft8cn/app/src/main/res/xml/: filepaths.xml
ft8cn/app/src/test/java/com/bg7yoz/ft8cn/: Ft8MessageTest.java  MessageHashMapTest.java
ft8cn/app/src/test/resources/adif/: sample-malformed.adi  sample-wsjtx.adi
ft8cn/app/src/test/resources/pskreporter/: reception-report.xml
ft8cn/app/src/test/resources/qrz/: auth-bad.xml  auth-ok.xml  lookup-no-image.xml  lookup-with-image.xml  session-expired.xml
ft8cn/config/detekt/: detekt.yml
(+54 files in other folders)
